jfLogon : trap exceptions